# disposable-chat-rooms-rs

./: system-design-v1.excalidraw
backend/: Cargo.toml
backend/src/: events-service.rs  handlers.rs  main.rs  message-consumer.rs  practice.rs
backend/src/dao/: message.rs  mod.rs  room.rs
backend/src/dtos/: events.rs  message.rs  mod.rs
backend/src/handlers/: events.rs  message.rs  mod.rs
backend/src/models/: member.rs  message.rs  mod.rs  ping.rs
backend/src/models/extractors/: mod.rs
backend/src/tower_services/: events.rs  mod.rs
backend/src/utils/: mod.rs  rabbitmq.rs
infra/: docker-compose.yml
infra/docker/dynamodb/: shared-local-instance.db
ui/: Readme.md
