[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "web"
path = "src/main.rs"

[[bin]]
name = "practice"
path = "src/practice.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
serde_dynamo = { version = "4.1.0", features = ["aws-sdk-dynamodb+0_24"] }
axum = "0.6.7"
axum-macros = "0.3.4"
hyper = { version = "0.14.24", features = ["full"]}
rusty_ulid = "2.0.0"
tokio = {version = "1.25.0", features = ["full"]}
tower = "0.4.13"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.93"
axum-extra = { version = "0.7.0", features = [ "cookie"]}
async-trait = "0.1.65"
